Android: Finished up margin setting for text views through attribute parser.

--- a/MdkStudio.Xamarin.Components.DualHandleSlider/Resources/layout/Main.axml
+++ b/MdkStudio.Xamarin.Components.DualHandleSlider/Resources/layout/Main.axml
@@ -9,6 +9,9 @@
         android:layout_centerInParent="true"
         title="Price"
         title_marginLeft="20dp"
+        title_marginBottom="20dp"
+        leftValue_marginLeft="20dp"
+        rightValue_marginRight="20dp"
         min_value="0"
         max_value="1000"
         step="5"
